actualizando archivos de lo ultimas clases

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
- <p>>primero se dibuja el componente contador</p>
+<!-- <p>>primero se dibuja el componente contador</p>
 <app-contador></app-contador>
-<!--<p>>segundo se dibuja el componente heroe</p>
-<app-heroe></app-heroe>-->
+<p>>segundo se dibuja el componente heroe</p>
+<app-heroe></app-heroe>
 <p>>tercero se dibuja el componente listado</p>
-<app-listado></app-listado> 
+<app-listado></app-listado> -->
+<app-main-page></app-main-page>
