--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,14 @@
   .p-1 {
     padding: 1px;
   }
+  .row{
+    display: flex;
+  }
+  .col{
+      flex-grow: 1;
+      margin-right: 20px;
+  }
+  input{
+    display: block;
+    margin: px;
+  }
